tests/compile-fail/alloc/deallocate-bad-size.stderr
error: Undefined Behavior: incorrect layout on deallocation: alloc962 has size 1 and alignment 1, but gave size 2 and alignment 1
  --> /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/alloc/src/alloc.rs:105:14
   |
LL |     unsafe { __rust_dealloc(ptr, layout.size(), layout.align()) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ incorrect layout on deallocation: alloc962 has size 1 and alignment 1, but gave size 2 and alignment 1
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `std::alloc::dealloc` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/alloc/src/alloc.rs:105:14
note: inside `main` at $DIR/deallocate-bad-size.rs:8:9
  --> $DIR/deallocate-bad-size.rs:8:9
   |
LL |         dealloc(x, Layout::from_size_align_unchecked(2, 1));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

